Remove exisiting swarm-{agent,manager}.service
This closes #2.

--- a/playbooks/roles/swarm-manage/templates/swarm-agent.service.j2
+++ b/playbooks/roles/swarm-manage/templates/swarm-agent.service.j2
@@ -3,6 +3,7 @@ Description=docker swarm agent
 After=docker.service
 
 [Service]
+ExecStartPre=/usr/bin/docker rm -f %n
 ExecStart=/usr/bin/docker run \
           --name %n \
           --rm \
