--- a/playbooks/roles/networkd-upgrade/templates/networkd.service.j2
+++ b/playbooks/roles/networkd-upgrade/templates/networkd.service.j2
@@ -15,6 +15,7 @@ ExecStart=/usr/bin/networkd {% if domain == 'lain.local' and vip == '0.0.0.0' %}
           --swarm \
           --deployd \
           --webrouter \
+          --streamrouter \
           --resolv.conf
 
 Restart=on-failure
