--- a/playbooks/roles/rebellion-upgrade-2.0.x-to-v2.3.0/templates/rebellion.service.j2
+++ b/playbooks/roles/rebellion-upgrade-2.0.x-to-v2.3.0/templates/rebellion.service.j2
@@ -12,7 +12,7 @@ ExecStart=/usr/bin/docker run \
           -v {{ lain_data_dir }}/rebellion/logs/filebeat:/var/log/filebeat/ \
           -v {{ lain_data_dir }}/rebellion/logs/supervisor:/var/log/supervisor/ \
           -v /var/log/:/var/log/syslog/:ro \
-          {{ rebellion_image }}
+          rebellion:v2.3.0
 ExecStop=/usr/bin/docker stop %n
 Restart=always
 
