add ipip suport

--- a/playbooks/roles/calico/templates/ippool.yml.j2
+++ b/playbooks/roles/calico/templates/ippool.yml.j2
@@ -3,4 +3,9 @@
   metadata:
     cidr: {{ calico_default_network }}
   spec:
+{% if calico_ipip|bool %}
+    ipip:
+        enabled: true
+        mode: always
+{% endif %}
     nat-outgoing: true
