--- a/playbooks/roles/docker/templates/daemon.json.j2
+++ b/playbooks/roles/docker/templates/daemon.json.j2
@@ -6,6 +6,9 @@
     {% if registry_mirror is defined %}
 "registry-mirrors": ["{{ registry_mirror }}"],
     {% endif -%}
+    {% if node_labels is defined %}
+"labels": [{% for label in node_labels %}"{{ label }}"{% if not loop.last %}, {% endif %}{% endfor %}],
+    {% endif -%}
     "insecure-registries": ["registry.lain","registry.{{ domain }}"{% if registry_mirror is defined %},"{{ registry_mirror|replace('http://', '')|replace('https://', '') }}"{% endif -%}{% if registry_bootstrap is defined %},"{{ registry_bootstrap|replace('http://', '')|replace('https://', '') }}"{% endif -%}],
     "dns": ["{{ node_ip }}"],
     "selinux-enabled": true,
