Added process monitor for lain

--- a/playbooks/roles/collectd/templates/collectd.conf.j2
+++ b/playbooks/roles/collectd/templates/collectd.conf.j2
@@ -98,6 +98,11 @@ LoadPlugin write_graphite
 
 <Plugin processes>
     Process "collectd"
+    Process "dockerd"
+    Process "etcd"
+    Process "consul"
+    Process "lainlet"
+    Process "networkd"
 </Plugin>
 
 <Plugin swap>
