Fixed lain collectd process

--- a/playbooks/roles/collectd/templates/lain.conf.j2
+++ b/playbooks/roles/collectd/templates/lain.conf.j2
@@ -16,4 +16,5 @@ TypesDB "/var/lib/collectd/types/lain.db"
         ProcessMatch "rebellion" "rebellion"
         ProcessMatch "filebeat" "filebeat"
         ProcessMatch "rsyslogd" "/usr/sbin/rsyslogd"
+        ProcessMatch "consul" "/usr/bin/consul"
 </Plugin>
