--- a/playbooks/roles/dnsmasq/templates/dnsmasq.conf.j2
+++ b/playbooks/roles/dnsmasq/templates/dnsmasq.conf.j2
@@ -10,3 +10,4 @@ address=/{{ domain }}/{{ vip }}
 addn-hosts=/etc/dnsmasq.hosts
 servers-file=/etc/dnsmasq.servers
 conf-dir=/etc/dnsmasq.d
+pid-file=/var/run/dnsmasq.pid
