--- a/playbooks/roles/etcd/templates/etcd.service.j2
+++ b/playbooks/roles/etcd/templates/etcd.service.j2
@@ -1,9 +1,11 @@
 [Unit]
-Description=etcd
+Description=etcd key-value store
+Documentation=https://github.com/coreos/etcd
 After=network.target
 
 [Service]
 User=etcd
+Type=notify
 LimitNOFILE=65535
 EnvironmentFile={{ etcd_dir }}/env
 ExecStart=/usr/bin/etcd
