--- a/playbooks/roles/rebellion/templates/rebellion.service.j2
+++ b/playbooks/roles/rebellion/templates/rebellion.service.j2
@@ -13,7 +13,7 @@ ExecStart=/usr/bin/docker run \
           -v {{ lain_data_dir }}/rebellion/logs/supervisor:/var/log/supervisor/ \
           -v /var/log/:/var/log/syslog/:ro \
           {{ rebellion_image }}
-ExecStop=/usr/bin/docker stop %n
+ExecStop=/bin/bash -c '/usr/bin/docker stop %n || true'
 Restart=always
 
 [Install]
