--- a/playbooks/roles/swarm-manage/templates/swarm-manager.service.j2
+++ b/playbooks/roles/swarm-manage/templates/swarm-manager.service.j2
@@ -11,7 +11,7 @@ ExecStart=/usr/bin/docker run \
           --replication \
           --addr={{ node_ip }}:{{ swarm_manager_port }} \
           etcd://{{ node_ip }}:{{ etcd_client_port }}/lain/swarm
-ExecStop=/usr/bin/docker stop %n
+ExecStop=/bin/bash -c '/usr/bin/docker stop %n || true'
 Restart=always
 
 [Install]
