--- a/playbooks/roles/docker/templates/daemon.json.j2
+++ b/playbooks/roles/docker/templates/daemon.json.j2
@@ -1,8 +1,12 @@
 {
-    {% if docker_device != "" %}
+    {% if ansible_distribution == "CentOS" %}
+      {% if docker_device != "" %}
 "storage-driver": "devicemapper",
     "storage-opts": ["dm.datadev={{ devicemapper_data_dir }}","dm.metadatadev={{ devicemapper_metadata_dir }}"],
+      {% endif -%}
+    "selinux-enabled": true,
     {% endif -%}
+
     {% if registry_mirror is defined %}
 "registry-mirrors": ["{{ registry_mirror }}"],
     {% endif -%}
@@ -11,7 +15,6 @@
     {% endif -%}
     "insecure-registries": ["registry.lain","registry.{{ domain }}"{% if registry_mirror is defined %},"{{ registry_mirror|replace('http://', '')|replace('https://', '') }}"{% endif -%}],
     "dns": ["{{ node_ip }}"],
-    "selinux-enabled": true,
     "graph": "{{ docker_graph_dir }}",
     "hosts": ["unix:///var/run/docker.sock","tcp://{{ node_ip }}:{{ docker_port }}"],
     "log-driver": "syslog",
