--- a/playbooks/roles/docker/templates/daemon.json.j2
+++ b/playbooks/roles/docker/templates/daemon.json.j2
@@ -21,5 +21,6 @@
     "log-opts": {
         "syslog-address": "tcp://127.0.0.1:514"
     },
-    "cluster-store": "consul://127.0.0.1:8500"
+    "cluster-store": "consul://127.0.0.1:8500",
+    "labels": ["group=public"]
 }
