--- a/playbooks/roles/docker-netstat/templates/docker-netstat.service.j2
+++ b/playbooks/roles/docker-netstat/templates/docker-netstat.service.j2
@@ -5,7 +5,7 @@ After=network-online.target
 
 [Service]
 Restart=on-failure
-ExecStart=/usr/bin/docker-netstat -docker {{ node_ip }}:{{ docker_port }} -host {{ graphite_vip }} -port {{ graphite_port }}
+ExecStart=/usr/bin/docker-netstat -graphite {{ graphite_vip }}:{{ graphite_port }}
 
 [Install]
 WantedBy=multi-user.target
