set docker labels group=default

--- a/playbooks/roles/docker/templates/daemon.json.j2
+++ b/playbooks/roles/docker/templates/daemon.json.j2
@@ -22,5 +22,5 @@
         "syslog-address": "tcp://127.0.0.1:514"
     },
     "cluster-store": "consul://127.0.0.1:8500",
-    "labels": ["group=public"]
+    "labels": ["group=default"]
 }
