--- a/playbooks/roles/docker-version/templates/docker.j2
+++ b/playbooks/roles/docker-version/templates/docker.j2
@@ -22,8 +22,7 @@ ExecStart=/usr/bin/docker daemon \
           --graph {{ docker_graph_dir }} \
           --host unix:///var/run/docker.sock \
           --host tcp://{{ node_ip }}:{{ docker_port }} \
-          --log-driver=syslog \
-          --log-opt syslog-address=tcp://127.0.0.1:514 \
+          --log-driver=none \
           --cluster-store=etcd://{{ node_ip }}:{{ etcd_client_port }}
 
 MountFlags=slave
