comment out PluginDir

--- a/playbooks/roles/collectd/templates/collectd.conf.j2
+++ b/playbooks/roles/collectd/templates/collectd.conf.j2
@@ -2,7 +2,7 @@ Hostname    "{{ inventory_hostname }}"
 FQDNLookup   false
 BaseDir     "/var/lib/collectd"
 PIDFile     "/var/run/collectd.pid"
-PluginDir   "/usr/lib64/collectd"
+# PluginDir   "/usr/lib64/collectd"
 TypesDB     "/usr/share/collectd/types.db"
 AutoLoadPlugin true
 CollectInternalStats true
