collectd df plugin only considered / and /data

--- a/playbooks/roles/collectd/templates/collectd.conf.j2
+++ b/playbooks/roles/collectd/templates/collectd.conf.j2
@@ -46,6 +46,9 @@ LoadPlugin write_graphite
 </Plugin>
 
 <Plugin df>
+    MountPoint "/"
+    MountPoint "/data"
+    IgnoreSelected false
     ReportByDevice false
     ReportReserved false
     ReportInodes true
