--- a/playbooks/roles/dnsmasq/templates/dnsmasq.conf.j2
+++ b/playbooks/roles/dnsmasq/templates/dnsmasq.conf.j2
@@ -1,6 +1,7 @@
 listen-address=127.0.0.1
 listen-address={{ node_ip }}
 address=/etcd.lain/{{ node_ip }}
+address=/consul.lain/{{ node_ip }}
 address=/docker.lain/{{ node_ip }}
 address=/lainlet.lain/{{ node_ip }}
 address=/metric.lain/{{ node_ip }}
