--- a/playbooks/roles/networkd/templates/networkd.service.j2
+++ b/playbooks/roles/networkd/templates/networkd.service.j2
@@ -10,13 +10,12 @@ ExecStart=/usr/bin/networkd {% if domain == 'lain.local' and vip == '0.0.0.0' %}
           --lainlet.endpoint={{ node_ip }}:{{ lainlet_port }} \
           --etcd.endpoint=http://{{ node_ip }}:{{ etcd_client_port }} \
           --libnetwork \
-          --dnsmasq \
           --tinydns \
           --swarm \
           --deployd \
           --webrouter \
           --streamrouter \
-          --resolv.conf
+          --godns.addr=0.0.0.0:53
 
 Restart=on-failure
 
